<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.gadgetsmend.vhicalowneralert.RegistrationActivity"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_weight="0.9"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

     <ImageView
         android:layout_gravity="center_horizontal"
         android:src="@drawable/new_logo"
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:contentDescription="@string/app_logo"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_your_vehicle"
        android:gravity="center"
        android:paddingTop="15dp"
        android:textColor="#F16736"
        android:textAllCaps="false"
        android:textSize="23sp"/>

    <EditText
        android:layout_marginTop="20dp"
        android:textColor="#534741"
        android:textColorHint="#534741"
        android:hint="@string/vehicle_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicleNo" />

    <EditText
        android:textColor="#534741"
        android:textColorHint="#534741"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name" />

    <EditText
        android:textColor="#534741"
        android:textColorHint="#534741"
        android:hint="@string/contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact_no" />

    <EditText
        android:textColor="#534741"
        android:textColorHint="#534741"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/referral"
        android:id="@+id/referral"
        android:maxLines="1" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_margin="20dp"
        android:textColor="#FEFEFE"
        android:background="#F16736"/>

    </LinearLayout>

    <LinearLayout
        android:weightSum="1"
        android:layout_weight="0.1"
        android:background="#F16736"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:paddingTop="5dp"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:layout_height="0dp"
            android:layout_width="wrap_content" >

            <TextView
                android:textSize="12sp"
                android:textColor="#FEFEFE"
                android:text="@string/social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="3dp"/>

            <TextView
                android:textSize="12sp"
                android:textColor="#FEFEFE"
                android:text="@string/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_weight="0.5"
            android:weightSum="1"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_weight="0.5"
                android:paddingTop="5dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:textSize="12sp"
                    android:textColor="#FEFEFE"
                    android:text="@string/made_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"/>

                <TextView
                    android:textSize="12sp"
                    android:textColor="#FEFEFE"
                    android:text="@string/india"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:paddingTop="5dp"
                android:gravity="center_horizontal"
                android:paddingLeft="30dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:textSize="12sp"
                    android:textColor="#FEFEFE"
                    android:text="@string/made_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"/>

                <TextView
                    android:textSize="12sp"
                    android:textColor="#FEFEFE"
                    android:text="@string/india"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
