<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/qr"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/qr"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="25sp"
        android:text="Like our Application? "
        />

    <TextView
        android:layout_gravity="center"
        android:textColor="#F16736"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="#F16736"
        android:textSize="20sp"
        android:text="@string/share"
        android:paddingBottom="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="#F16736"
        android:textSize="25sp"
        android:text="@string/click_below" />

    <Button
        android:onClick="shareLink"
        android:layout_marginTop="5dp"
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/shared"/>
</LinearLayout>