<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="#F16736"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="5dp"
            android:src="@drawable/emergency_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/emergency_logo"/>

    </LinearLayout>

    <EditText
        android:layout_gravity="center_horizontal"
        android:id="@+id/alertMessage"
        android:layout_width="300dp"
        android:layout_margin="5dp"
        android:layout_height="75dp"
        android:hint="@string/guide_ambulance" />

    <EditText
        android:layout_gravity="center_horizontal"
        android:id="@+id/alertArea"
        android:layout_width="300dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/range" />

</LinearLayout>